--- a/src/scss/MPaper.scss
+++ b/src/scss/MPaper.scss
@@ -10,4 +10,11 @@
     width: 217px;
     height: 217px;
   }
+
+  .text {
+    position: absolute;
+    background: #3f51b5;
+    color: #fff;
+    padding: 20px 5px;
+  }
 }
