--- a/src/scss/Layout.scss
+++ b/src/scss/Layout.scss
@@ -37,3 +37,11 @@
     background-color: rgb(7 108 224);
   }
 }
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  background-color: #3f51b5;
+}
